# FmodDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/wangxi/fmodtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/inc/: com_example_wangxi_fmodtest_VoiceFixer.h  fmod.hpp
app/src/main/java/com/example/wangxi/fmodtest/: MainActivity.java  VoiceFixer.java
app/src/main/res/layout/: main_activity.xml
app/src/test/java/com/example/wangxi/fmodtest/: ExampleUnitTest.java
